Fixed Null Rank causing errors

--- a/Resources/profile/slider.html
+++ b/Resources/profile/slider.html
@@ -245,6 +245,8 @@
             }
         }
 
+        $('.title .desc').text((topAttackerValue > topDefenderValue ? topAttacker : topDefender) + " Main");
+
         $("#flat-slider-vertical-1")
             .slider({
                 max: 100,
